# EvolveChain-Core

./: .gitignore  COPYING  EvolveChain.files  EvolveChain.includes  INSTALL  Makefile.am  README.md  configure.ac
.tx/: config
contrib/: CentOS Build.txt  README.md  UbuntuDependencies.txt  VirtualBox and Make.txt  bitcoin-qt.pro  bitcoind.bash-completion  change-Bitcoin.txt  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  bitcoin-qt.desktop  bitcoin-qt.install  bitcoin-qt.lintian-overrides  bitcoin-qt.protocol  bitcoind.bash-completion  bitcoind.examples  bitcoind.install  bitcoind.lintian-overrides  bitcoind.manpages  changelog  control  copyright  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  update-translations.py
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-all.sh  gitian-deps.sh  gitian-linux.yml  gitian-osx-bitcoin.yml  gitian-osx-greencoin.yml  gitian-win.yml  qt-linux.yml  qt-win.yml
contrib/gitian-downloader/: bluematt-key.pgp  linux-download-config  win32-download-config
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macdeploy/: DS_Store  README.md  background.psd  fancy.plist  macdeployqtplus
contrib/pyminer/: README.md  example-config.cfg  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  makeseeds.py
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: verify.sh
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  bootstrap.md  build-msw.md  build-osx.md  build-unix.md  coding.md  evolvechain.conf  gitian-building.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  unit-tests.md
doc/release-notes/: release-notes-0.3.12.md  release-notes-0.3.13.md  release-notes-0.3.14.md  release-notes-0.3.15.md  release-notes-0.3.18.md  release-notes-0.3.20.2.md  release-notes-0.3.20.md  release-notes-0.3.21.md  release-notes-0.3.22.md  release-notes-0.3.23.md  release-notes-0.3.24.md  release-notes-0.4.0.md  release-notes-0.4.1.md  release-notes-0.4.3.md  release-notes-0.4.4.md  release-notes-0.4.6.md  release-notes-0.5.0.md  release-notes-0.5.1.md  release-notes-0.5.2.md  release-notes-0.5.3.md  release-notes-0.5.4.md  release-notes-0.5.5.md  release-notes-0.6.0.md  release-notes-0.6.2.md  release-notes-0.6.3.md  release-notes-0.7.0.md  release-notes-0.7.1.md  release-notes-0.7.2.md  (+8 more)
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.include  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  base58.cpp  base58.h  bignum.h  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  core.cpp  core.h  crypter.cpp  crypter.h  db.cpp  db.h  evolvechain-cli-res.rc  evolvechain-cli.cpp  evolvechaind-res.rc  evolvechaind.cpp  hash.h  init.cpp  init.h  key.cpp  key.h  keystore.cpp  keystore.h  leveldbwrapper.cpp  (+48 more)
src/compat/: glibc_compat.cpp
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/leveldb/util/: crc32c.cc
src/m4/: evolvechain_find_bdb48.m4  evolvechain_qt.m4  evolvechain_subdir_to_include.m4
src/qt/: Makefile.am  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  evolvechain.cpp  evolvechain.qrc  evolvechainaddressvalidator.cpp  evolvechainaddressvalidator.h  evolvechainamountfield.cpp  evolvechainamountfield.h  evolvechaingui.cpp  evolvechaingui.h  evolvechainstrings.cpp  evolvechainunits.cpp  evolvechainunits.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  make.exe.stackdump  monitoreddatamapper.cpp  monitoreddatamapper.h  (+61 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: evolvechain_ach.ts  evolvechain_af_ZA.ts  evolvechain_ar.ts  evolvechain_be_BY.ts  evolvechain_bg.ts  evolvechain_bs.ts  evolvechain_ca.ts  evolvechain_ca@valencia.ts  evolvechain_ca_ES.ts  evolvechain_cmn.ts  evolvechain_cs.ts  evolvechain_cy.ts  evolvechain_da.ts  evolvechain_de.ts  evolvechain_el_GR.ts  evolvechain_en.ts  evolvechain_eo.ts  evolvechain_es.ts  evolvechain_es_CL.ts  evolvechain_es_DO.ts  evolvechain_es_MX.ts  evolvechain_es_UY.ts  evolvechain_et.ts  evolvechain_eu_ES.ts  evolvechain_fa.ts  evolvechain_fa_IR.ts  evolvechain_fi.ts  evolvechain_fr.ts  evolvechain_fr_CA.ts  evolvechain_gl.ts  evolvechain_gu_IN.ts  evolvechain_he.ts  evolvechain_hi_IN.ts  evolvechain_hr.ts  evolvechain_hu.ts  evolvechain_id_ID.ts  evolvechain_it.ts  evolvechain_ja.ts  evolvechain_ka.ts  evolvechain_kk_KZ.ts  (+31 more)
src/qt/res/: evolvechain-qt-res.rc
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile.am  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  canonical_tests.cpp  checkblock_tests.cpp  compress_tests.cpp  getarg_tests.cpp  hash_tests.cpp  hmac_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  serialize_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  test_evolvechain.cpp  transaction_tests.cpp  uint256_tests.cpp  util_tests.cpp  wallet_tests.cpp
src/test/data/: README.md  sighash.json  tx_valid.json
(+30 files in other folders)
